--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "class-transformer": "^0.2.3",
+    "es6-shim": "^0.35.5",
+    "lodash": "^4.17.15",
+    "reflect-metadata": "^0.1.13"
   }
 }
